--- a/.github/workflows/go-build.yaml
+++ b/.github/workflows/go-build.yaml
@@ -28,44 +28,33 @@ on:
         type: boolean
         default: true
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - name: Build with go-release-action
+        uses: wangyoucao577/go-release-action@v1
         with:
-          go-version: ${{ inputs.go-version }}
-
-      - name: Build
-        working-directory: ${{ inputs.working-directory }}
-        run: go build -v -o server .
-
-      - name: Test
-        working-directory: ${{ inputs.working-directory }}
-        run: go test -v ./...
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: linux
+          goarch: amd64
+          goversion: ${{ inputs.go-version }}
+          project_path: ${{ inputs.working-directory }}
+          binary_name: server
+          release_tag: ${{ github.sha }}
+          overwrite: true
 
   docker:
     runs-on: ubuntu-latest
     needs: build
     if: ${{ inputs.build-docker }}
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Derive image name
-        id: image
-        run: |
-          if [ -n "${{ inputs.image-name }}" ]; then
-            echo "name=${{ inputs.image-name }}" >> "$GITHUB_OUTPUT"
-          else
-            echo "name=$(basename "${{ inputs.working-directory }}")" >> "$GITHUB_OUTPUT"
-          fi
+      - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -75,4 +64,4 @@ jobs:
         with:
           context: ${{ inputs.docker-context != '' && inputs.docker-context || inputs.working-directory }}
           push: false
-          tags: ${{ steps.image.outputs.name }}:${{ github.sha }}
+          tags: ${{ inputs.image-name != '' && inputs.image-name || inputs.working-directory }}:${{ github.sha }}
