--- a/.github/workflows/go-release.yaml
+++ b/.github/workflows/go-release.yaml
@@ -27,12 +27,19 @@ on:
         required: false
         type: string
         default: 'amd64'
+      ref:
+        description: 'Git ref to checkout (tag, branch, SHA)'
+        required: false
+        type: string
+        default: ''
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.ref || github.ref }}
 
       - name: Build and upload release
         uses: wangyoucao577/go-release-action@v1
